--- a/index.html
+++ b/index.html
@@ -2,100 +2,123 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
   <title>K. Krishna Vamsi — Portfolio</title>
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
-  <!-- Font Awesome for icons -->
+  <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
   <style>
-    :root{
+    /* ------------------------- 
+          GLOBAL
+    ------------------------- */
+    :root {
       --accent:#0d6efd;
       --muted:#6c757d;
-      --card-bg: #ffffff;
-      --page-bg: #f7f9fc;
-    }
-    body{
-      background:var(--page-bg);
-      font-family: Inter, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
-      color:#222;
-      -webkit-font-smoothing:antialiased;
-      -moz-osx-font-smoothing:grayscale;
+      --card-bg: #fff;
+
+      /* Fluid layout values */
+      --gap: clamp(0.6rem, 1.2vw, 1.2rem);
+      --pad: clamp(0.75rem, 1.2vw, 1.5rem);
+
+      /* Fluid font sizes */
+      --fs-sm: clamp(0.8rem, 0.9vw, 0.95rem);
+      --fs-md: clamp(0.9rem, 1vw, 1.05rem);
+      --fs-lg: clamp(1.1rem, 2vw, 1.6rem);
+      --fs-xl: clamp(1.4rem, 3vw, 2.2rem);
     }
 
-    /* Header */
+    body {
+      background: #f4f6fa;
+      font-family: Inter, system-ui, sans-serif;
+      color:#222;
+    }
+
+    h1 { font-size: var(--fs-xl); }
+    h5 { font-size: var(--fs-md); }
+    p, li { font-size: var(--fs-md); }
+
+    /* ------------------------- 
+         HERO HEADER
+    ------------------------- */
     .hero {
-      background: linear-gradient(180deg, rgba(13,110,253,0.07), rgba(255,255,255,0));
-      padding: 3.5rem 1rem;
-      border-bottom: 1px solid rgba(0,0,0,0.03);
+      background: linear-gradient(180deg, rgba(13,110,253,0.10), rgba(255,255,255,0));
+      padding: clamp(2rem, 5vw, 4rem) 1rem;
     }
     .avatar {
-      width:110px;
-      height:110px;
-      border-radius:16px;
-      background:linear-gradient(135deg,#fff,#f1f5ff);
+      width: clamp(70px, 12vw, 110px);
+      height: clamp(70px, 12vw, 110px);
+      border-radius: 16px;
+      background:#fff;
       display:flex;
-      align-items:center;
       justify-content:center;
-      font-weight:700;
-      color:var(--accent);
-      font-size:32px;
-      box-shadow: 0 6px 18px rgba(13,110,253,0.06);
+      align-items:center;
+      font-size: clamp(1.2rem, 4vw, 2.2rem);
+      font-weight: 700;
+      color: var(--accent);
+      box-shadow: 0 6px 16px rgba(13,110,253,0.10);
     }
 
     .chip {
-      font-size:.9rem;
-      color:var(--muted);
-      background:#fff;
-      border:1px solid rgba(0,0,0,0.04);
-      padding:.25rem .5rem;
-      border-radius:8px;
+      font-size: var(--fs-sm);
+      border-radius: 8px;
+      border:1px solid rgba(0,0,0,0.1);
+      padding: 0.3rem 0.55rem;
+      white-space: nowrap;
     }
 
-    /* Cards and sections */
+    /* ------------------------- 
+          CARD + PROJECT CARDS
+    ------------------------- */
     .card {
-      border:0;
-      border-radius:14px;
-      box-shadow: 0 8px 30px rgba(18,38,63,0.06);
-    }
-    .section-title {
-      font-weight:700;
-      font-size:1.05rem;
-      margin-bottom:.6rem;
-    }
-    .skill-badge {
-      border-radius:999px;
-      background:#fff;
-      border:1px solid rgba(0,0,0,0.06);
-      padding:.45rem .6rem;
-      margin:.25rem .25rem .25rem 0;
-      display:inline-block;
-      font-weight:600;
-      font-size:.9rem;
+      border-radius: 14px;
+      padding: var(--pad);
+      box-shadow: 0 6px 20px rgba(0,0,0,0.06);
     }
 
-    /* Projects */
     .project-card {
-      border-radius:12px;
-      padding:1rem;
-      background:linear-gradient(180deg,#fff,#fbfdff);
-      border:1px solid rgba(10,10,10,0.03);
-      transition: transform .18s ease, box-shadow .18s ease;
+      background:#fff;
+      border-radius: 12px;
+      padding: var(--pad);
+      transition: 0.2s;
+      border: 1px solid rgba(0,0,0,0.05);
     }
-    .project-card:hover{ transform: translateY(-6px); box-shadow: 0 12px 40px rgba(10,30,80,0.06); }
-
-    footer{
-      color:var(--muted);
-      padding:2rem 0;
+    .project-card:hover {
+      transform: translateY(-4px);
+      box-shadow: 0 12px 30px rgba(0,0,0,0.08);
     }
 
-    /* Responsive tweaks */
-    @media (max-width:767px){
-      .hero { padding:2rem 1rem; }
-      .avatar{ width:88px; height:88px; font-size:26px; }
+    /* Skill badges */
+    .skill-badge {
+      display:inline-block;
+      border-radius:999px;
+      padding:0.4rem 0.7rem;
+      font-size: var(--fs-sm);
+      margin: 0.25rem;
+      border:1px solid rgba(0,0,0,0.08);
+    }
+
+    /* Responsive text wrap fix */
+    .chip, .skill-badge {
+      overflow-wrap: break-word;
+    }
+
+    /* Ensure images always fit */
+    img {
+      max-width: 100%;
+      height: auto;
+    }
+
+    /* ------------------------- 
+          RESPONSIVE FIXES
+    ------------------------- */
+    @media (max-width:768px) {
+      .hero { text-align:center; }
+      .chip { font-size: 0.8rem; }
+      .card, .project-card { padding: 1rem; }
     }
   </style>
 </head>
@@ -104,221 +127,164 @@
   <!-- HERO -->
   <header class="hero">
     <div class="container">
-      <div class="row align-items-center">
+      <div class="row align-items-center gy-4">
+        
         <div class="col-md-8">
-          <div class="d-flex align-items-center gap-3">
+          <div class="d-flex align-items-center gap-3 flex-wrap">
             <div class="avatar">KV</div>
+
             <div>
-              <h1 class="mb-0">K. Krishna Vamsi</h1>
-              <p class="mb-1 text-muted">Tech Enthusiast • Full Stack / Spring Boot • C++ / Java / DSA</p>
-              <div class="d-flex gap-2 align-items-center">
+              <h1 class="mb-1">K. Krishna Vamsi</h1>
+              <p class="text-muted mb-2">Tech Enthusiast • Full Stack / Spring Boot • C++ / Java / DSA</p>
+
+              <div class="d-flex flex-wrap gap-2">
                 <span class="chip"><i class="fa-solid fa-phone me-1"></i> 9951645207</span>
                 <span class="chip"><i class="fa-solid fa-envelope me-1"></i> vkrishnavamsi7@gmail.com</span>
-                <span class="chip"><i class="fa-solid fa-location-dot me-1"></i> Andhra Pradesh, India</span>
+                <span class="chip"><i class="fa-solid fa-location-dot me-1"></i> Andhra Pradesh</span>
               </div>
             </div>
+
           </div>
         </div>
 
-        <div class="col-md-4 text-md-end mt-3 mt-md-0">
-
-
-          <!-- Resume download: if using local folder, put PDF in same directory -->
-          <!--a href="sandbox:/mnt/data/Krishna_vamsi_resume%20(1).pdf" class="btn btn-outline-primary btn-sm me-2" download>
-            <i class="fa-solid fa-download me-1"></i> Download Resume
-          </a>
-          <a href="#contact" class="btn btn-primary btn-sm">
-            <i class="fa-solid fa-paper-plane me-1"></i> Contact
-          </a-->
-
-
-        </div>
       </div>
     </div>
   </header>
 
-  <!-- MAIN -->
+  <!-- MAIN CONTENT -->
   <main class="py-5">
     <div class="container">
       <div class="row g-4">
-        <!-- Left column -->
+
+        <!-- LEFT COLUMN -->
         <div class="col-lg-8">
-          <!-- About -->
-          <section class="mb-4">
-            <div class="card p-4">
-              <div class="row">
-                <div class="col-md-8">
-                  <div class="section-title">About</div>
-                  <p>
-                    An innovative thinker and multi-dimensional professional with strong analytical and logical design skills.
-                    Skilled in Spring Boot, PostgreSQL, core Java, C++, web technologies (HTML/CSS/JS) and problem solving using DSA.
-                  </p>
-                  <p class="mb-0 text-muted small">Education: B.Tech (2020–2024) — Computer Science, Aditya College of Engineering, Surampalem.</p>
-                </div>
-                <div class="col-md-4 text-md-end mt-3 mt-md-0">
-                  <div class="chip mb-2">Frameworks: Spring Boot, ReactJS</div>
-                  <div class="chip mb-2">DB: PostgreSQL</div>
-                  <div class="chip">Tools: VS Code • Git • Postman</div>
-                </div>
-              </div>
+
+          <!-- ABOUT -->
+          <section>
+            <div class="card">
+              <h5 class="mb-2">About</h5>
+              <p>
+                Innovative thinker with strong analytical skills. Skilled in Spring Boot, PostgreSQL,
+                Java, C++, web development and problem solving using DSA.
+              </p>
+              <p class="text-muted small mb-0">Education: B.Tech (2020–2024) — Aditya College of Engineering.</p>
             </div>
           </section>
 
-          <!-- Projects -->
-          <section class="mb-4">
-            <div class="section-title">Projects</div>
+          <!-- PROJECTS -->
+          <section class="mt-4">
+            <h5>Projects</h5>
 
             <div class="row g-3">
+
               <div class="col-md-6">
                 <div class="project-card">
                   <h5>Student Management System</h5>
-                  <p class="mb-1 small text-muted">Spring Boot • Spring Data JPA • PostgreSQL • Postman</p>
-                  <ul class="mb-0 small">
-                    <li>REST controllers for CRUD operations</li>
-                    <li>Service layer with validation & exception handling</li>
-                    <li>Configured PostgreSQL and tested endpoints in Postman</li>
+                  <p class="small text-muted">Spring Boot • JPA • PostgreSQL</p>
+                  <ul class="small">
+                    <li>CRUD REST API</li>
+                    <li>Service layer validation</li>
+                    <li>PostgreSQL configuration</li>
                   </ul>
                 </div>
               </div>
 
               <div class="col-md-6">
                 <div class="project-card">
-                  <h5>Shopping Cart (C++ / DSA)</h5>
-                  <p class="mb-1 small text-muted">C++ • Algorithms</p>
-                  <p class="small mb-0">Implemented shopping cart algorithms and optimized operations using data structures for performance.</p>
+                  <h5>Shopping Cart (C++)</h5>
+                  <p class="small text-muted">C++ • Algorithms</p>
+                  <p class="small">Optimized using efficient data structures.</p>
                 </div>
               </div>
 
               <div class="col-md-6">
                 <div class="project-card">
                   <h5>Portfolio Website</h5>
-                  <p class="mb-1 small text-muted">HTML • CSS • JavaScript</p>
-                  <p class="small mb-0">This portfolio is a modern single-file template. Responsive and Bootstrap-based.</p>
+                  <p class="small text-muted">HTML • CSS • JS</p>
+                  <p class="small">Fully responsive portfolio design.</p>
                 </div>
               </div>
 
               <div class="col-md-6">
                 <div class="project-card">
                   <h5>Pen Plotting</h5>
-                  <p class="mb-1 small text-muted">Arduino • GRBL • Inkscape</p>
-                  <p class="small mb-0">Hardware & firmware for pen plotting for engineering/design tasks.</p>
+                  <p class="small text-muted">Arduino • GRBL</p>
+                  <p class="small">Hardware & firmware implementation.</p>
                 </div>
               </div>
+
             </div>
           </section>
 
-          <!-- Coding profiles -->
-          <section class="mb-4">
-            <div class="card p-4">
-              <div class="section-title">Coding Profiles & Achievements</div>
-              <p class="mb-2 small text-muted">
-                Quick links to public coding profiles and achievements.
-              </p>
+          <!-- PROFILE LINKS -->
+          <section class="mt-4">
+            <div class="card">
+              <h5>Coding Profiles</h5>
 
-              <div class="d-flex flex-wrap gap-2">
-                <a class="btn btn-outline-dark btn-sm" target="_blank" rel="noopener"
-                   href="https://www.hackerrank.com/profile/20MH1A4920">
-                   <i class="fa-brands fa-hackerrank me-1"></i> HackerRank Profile
+              <div class="d-flex flex-wrap gap-2 mt-2">
+                <a class="btn btn-outline-dark btn-sm" target="_blank" href="https://www.hackerrank.com/profile/20MH1A4920">
+                  <i class="fa-brands fa-hackerrank me-1"></i> HackerRank
                 </a>
-
-                <a class="btn btn-outline-dark btn-sm" target="_blank" rel="noopener"
-                   href="https://leetcode.com/u/krishna_vamsi_katta/">
-                   <i class="fa-brands fa-codepen me-1"></i> LeetCode Profile
+                <a class="btn btn-outline-dark btn-sm" target="_blank" href="https://leetcode.com/u/krishna_vamsi_katta/">
+                  <i class="fa-brands fa-codepen me-1"></i> LeetCode
                 </a>
-
-                <a class="btn btn-outline-dark btn-sm" target="_blank" rel="noopener"
-                   href="https://www.geeksforgeeks.org/profile/kirshna_vamsi?tab=activity">
-                   <i class="fa-solid fa-book-open me-1"></i> GeeksforGeeks Profile
+                <a class="btn btn-outline-dark btn-sm" target="_blank" href="https://www.geeksforgeeks.org/profile/kirshna_vamsi?tab=activity">
+                  <i class="fa-solid fa-book-open me-1"></i> GFG
                 </a>
               </div>
 
-              <hr class="my-3">
+              <hr>
 
               <div class="row">
                 <div class="col-md-6">
-                  <div class="section-title">Languages & Tools</div>
-                  <div>
-                    <span class="skill-badge">C++</span>
-                    <span class="skill-badge">Core Java</span>
-                    <span class="skill-badge">SQL</span>
-                    <span class="skill-badge">HTML</span>
-                    <span class="skill-badge">CSS</span>
-                    <span class="skill-badge">JavaScript</span>
-                  </div>
+                  <h6>Languages</h6>
+                  <span class="skill-badge">C++</span>
+                  <span class="skill-badge">Java</span>
+                  <span class="skill-badge">SQL</span>
+                  <span class="skill-badge">HTML</span>
+                  <span class="skill-badge">CSS</span>
                 </div>
+
                 <div class="col-md-6">
-                  <div class="section-title">Frameworks & DB</div>
-                  <div>
-                    <span class="skill-badge">Spring Boot</span>
-                    <span class="skill-badge">ReactJS</span>
-                    <span class="skill-badge">PostgreSQL</span>
-                    <span class="skill-badge">Maven</span>
-                  </div>
+                  <h6>Frameworks</h6>
+                  <span class="skill-badge">Spring Boot</span>
+                  <span class="skill-badge">ReactJS</span>
+                  <span class="skill-badge">PostgreSQL</span>
                 </div>
               </div>
-
             </div>
           </section>
 
         </div>
 
-        <!-- Right column -->
+        <!-- RIGHT COLUMN -->
         <aside class="col-lg-4">
-          <div class="card p-3 mb-3">
-            <div class="section-title">Quick Contact</div>
-            <p class="mb-1"><strong>Phone:</strong> 9951645207</p>
-            <p class="mb-1"><strong>Email:</strong> <a href="mailto:vkrishnavamsi7@gmail.com">vkrishnavamsi7@gmail.com</a></p>
-            <p class="mb-0 text-muted small">Andhra Pradesh, India</p>
-            <hr>
-            <a href="mailto:vkrishnavamsi7@gmail.com" class="btn btn-primary btn-sm w-100"><i class="fa-solid fa-envelope me-1"></i> Email Me</a>
+
+          <div class="card">
+            <h5>Quick Contact</h5>
+            <p><strong>Phone:</strong> 9951645207</p>
+            <p><strong>Email:</strong> <a href="mailto:vkrishnavamsi7@gmail.com">vkrishnavamsi7@gmail.com</a></p>
+            <p class="text-muted small">Andhra Pradesh, India</p>
+            <a href="mailto:vkrishnavamsi7@gmail.com" class="btn btn-primary btn-sm w-100 mt-2">Email Me</a>
           </div>
 
-          <div class="card p-3 mb-3">
-            <div class="section-title">Education</div>
-            <p class="mb-1"><strong>B.Tech (2020–2024)</strong></p>
-            <p class="mb-1 small text-muted">Computer Science, Aditya College of Engineering, Surampalem, Andhra Pradesh</p>
-            <p class="mb-1"><strong>Intermediate (2018–2020)</strong></p>
-            <p class="small text-muted">MPC — Aditya Junior College, Mandapeta</p>
-          </div>
-
-          <div class="card p-3">
-            <div class="section-title">Coding Profiles</div>
-            <!--a class="btn btn-outline-secondary w-100 mb-2" href="sandbox:/mnt/data/Krishna_vamsi_resume%20(1).pdf" download>
-              <i class="fa-solid fa-file-arrow-down me-1"></i> Download Resume (PDF)
-            </a-->
-
-            <a class="btn btn-outline-secondary w-100 mb-2" target="_blank" href="https://www.hackerrank.com/profile/20MH1A4920">
-              <i class="fa-brands fa-hackerrank me-1"></i> HackerRank
-            </a>
-
-            <a class="btn btn-outline-secondary w-100 mb-2" target="_blank" href="https://leetcode.com/u/krishna_vamsi_katta/">
-              <i class="fa-brands fa-codepen me-1"></i> LeetCode
-            </a>
-
-            <a class="btn btn-outline-secondary w-100" target="_blank" href="https://www.geeksforgeeks.org/profile/kirshna_vamsi?tab=activity">
-              <i class="fa-solid fa-book-open me-1"></i> GeeksforGeeks
-            </a>
+          <div class="card mt-3">
+            <h5>Education</h5>
+            <p class="mb-1"><strong>B.Tech 2020–2024</strong></p>
+            <p class="small text-muted">Aditya Engineering College</p>
+            <p class="mb-1"><strong>Intermediate</strong></p>
+            <p class="small text-muted">Aditya Junior College</p>
           </div>
 
         </aside>
+
       </div>
     </div>
   </main>
 
-  <!-- CONTACT / FOOTER -->
-  <footer class="border-top">
-    <div class="container">
-      <div class="row align-items-center">
-        <div class="col-md-8">
-          <p class="mb-0">© <strong>K. Krishna Vamsi</strong> —  <span class="text-muted small">Contact: vkrishnavamsi7@gmail.com</span></p>
-        </div>
-        <!--div class="col-md-4 text-md-end">
-          <a class="text-muted me-3" href="https://www.hackerrank.com/profile/20MH1A4920" target="_blank" rel="noopener"><i class="fa-brands fa-hackerrank"></i></a>
-          <a class="text-muted me-3" href="https://leetcode.com/u/krishna_vamsi_katta/" target="_blank" rel="noopener"><i class="fa-brands fa-codepen"></i></a>
-          <a class="text-muted" href="https://www.geeksforgeeks.org/profile/kirshna_vamsi?tab=activity" target="_blank" rel="noopener"><i class="fa-solid fa-book-open"></i></a>
-        </div>
-      </div-->
-    </div>
+  <!-- FOOTER -->
+  <footer class="text-center py-3 text-muted small">
+    © K. Krishna Vamsi — Portfolio
   </footer>
 
   <!-- Bootstrap JS -->
