--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
             <h5>Education</h5>
             <p class="mb-1"><strong>B.Tech 2020–2024</strong></p>
             <p class="small text-muted">Aditya Engineering College</p>
-            <p class="mb-1"><strong>Intermediate</strong></p>
+            <p class="mb-1"><strong>Intermediate 2018–2020</strong></p>
             <p class="small text-muted">Aditya Junior College</p>
           </div>
 
@@ -291,3 +291,4 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
