--- a/index.html
+++ b/index.html
@@ -541,6 +541,14 @@
                         <div class="progress-fill" style="width: 75%;">75%</div>
                     </div>
                 </div>
+                <div class="skill-item">Bootstrap<div class="progress-bg">
+                        <div class="progress-fill" style="width: 75%;">75%</div>
+                    </div>
+                </div>
+                <div class="skill-item">JavaScript <div class="progress-bg">
+                        <div class="progress-fill" style="width: 85%;">85%</div>
+                    </div>
+                </div>
             </div>
             <div class="skill-box">
                 <h3>Frameworks & Tech</h3>
@@ -552,8 +560,12 @@
                         <div class="progress-fill" style="width: 70%;">70%</div>
                     </div>
                 </div>
-                <div class="skill-item">Web (HTML/CSS) <div class="progress-bg">
+                <div class="skill-item">Web (HTML-5/CSS-3) <div class="progress-bg">
                         <div class="progress-fill" style="width: 85%;">85%</div>
+                    </div>
+                </div>
+                 <div class="skill-item">React<div class="progress-bg">
+                        <div class="progress-fill" style="width: 70%;">70%</div>
                     </div>
                 </div>
             </div>
@@ -655,3 +667,4 @@
 </body>
 
 </html>
+
