--- a/index.html
+++ b/index.html
@@ -541,6 +541,10 @@
                         <div class="progress-fill" style="width: 75%;">75%</div>
                     </div>
                 </div>
+                <div class="skill-item">Python <div class="progress-bg">
+                        <div class="progress-fill" style="width: 75%;">75%</div>
+                    </div>
+                </div>
                 
                 <div class="skill-item">JavaScript <div class="progress-bg">
                         <div class="progress-fill" style="width: 85%;">85%</div>
@@ -668,5 +672,6 @@
 </body>
 
 </html>
+
 
 
