--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
                     class="cursor"></span></p>
             <p class="text-secondary">
                 Innovative thinker with strong analytical skills. I am an <b>engineering graduate</b> and a passionate
-                <b>coder</b> skilled in Spring Boot, PostgreSQL, Java, C++, and problem-solving using DSA.
+                <b>coder</b> skilled in Spring Boot, PostgreSQL, Java, C++, React ,and problem-solving using DSA.
             </p>
             <div style="margin-top: 20px; display: flex; gap: 15px;">
                 <a href="mailto:vkrishnavamsi7@gmail.com" class="btn">Hire Me</a>
@@ -672,6 +672,7 @@
 </body>
 
 </html>
+
 
 
 
