--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
             </p>
             <div style="margin-top: 20px; display: flex; gap: 15px;">
                 <a href="mailto:vkrishnavamsi7@gmail.com" class="btn">Hire Me</a>
-                <a href="https://github.com" class="btn" style="background: #333;">GitHub</a>
+                <a href="https://github.com/Vamsi759" class="btn" style="background: #333;">GitHub</a>
             </div>
         </div>
         <div class="avatar-large">
@@ -672,6 +672,7 @@
 </body>
 
 </html>
+
 
 
 
